--- a/ShankarMasala/ShankarMasala/Controller/Select Branch/SelectBranchViewController.xib
+++ b/ShankarMasala/ShankarMasala/Controller/Select Branch/SelectBranchViewController.xib
@@ -48,6 +48,9 @@
                     <state key="normal" title="Next">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="nextClickedWithSender:" destination="-1" eventType="touchUpInside" id="bKi-OX-96f"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
